Added TemplateChooser and Mustache-Editor

--- a/admin-app/public/index.html
+++ b/admin-app/public/index.html
@@ -1,5 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head><meta charset="UTF-8" /><title>Admin</title></head>
+  <head><meta charset="UTF-8" /><title>Admin</title>
+  <style>
+  .gjs-if-block {
+    border: 1px dashed #999;
+    background-color: #f9f9f9;
+    padding: 10px;
+    margin: 5px 0;
+  }
+</style>
+  </head>
   <body><div id="root"></div></body>
 </html>
